load posts when opening ext, as well as on scroll

--- a/manifest.json
+++ b/manifest.json
@@ -3,10 +3,7 @@
   "description": "Automatically generate comments on Linkedin posts to keep you top of mind in your network.",
   "version": "1.0",
   "manifest_version": 3,
-  "permissions": ["storage", "activeTab", "scripting"],
-  "background": {
-    "service_worker": "background.js"
-  },
+  "permissions": ["storage", "activeTab"],
   "content_scripts": [{
     "matches": ["*://*.linkedin.com/*"],
     "js": ["contentScript.js"]
