--- a/manifest.json
+++ b/manifest.json
@@ -9,6 +9,18 @@
     "js": ["contentScript.js"]
   }],
   "action": {
-    "default_popup": "./index.html"
+    "default_popup": "./index.html",
+    "default_icon": {
+      "16": "logo16.png",
+      "32": "logo32.png",
+      "48": "logo48.png",
+      "128": "logo128.png"
+    }
+  },
+  "icons": {
+    "16": "logo16.png",
+    "32": "logo32.png",
+    "48": "logo48.png",
+    "128": "logo128.png"
   }
 }
