--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bootstrap": "5.1.0",
+    "cors": "^2.8.5",
     "next": "11.1.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.0.0-beta.5",
@@ -18,6 +19,7 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.154",
+    "@types/cors": "^2.8.12",
     "@types/react": "17.0.19",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.0",
